# Provenant-The-system-of-record-for-enterprise-AI-governance.

./: .env.example  .gitignore  .gitleaks.toml  BUILD-LOG.md  CLAUDE.md  DESIGN.md  README.md  SETUP-WINDOWS.md  design-preview.html  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml
apps/api/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.module.ts  env.ts  main.ts  otel.ts
apps/api/src/ai/: ai.controller.ts  ai.service.ts
apps/api/src/approvals/: approvals.controller.ts  approvals.service.ts
apps/api/src/assessments/: assessments.controller.ts  assessments.service.ts  questionnaires.controller.ts
apps/api/src/audit/: audit.controller.ts  audit.service.ts
apps/api/src/auth/: auth.controller.ts  auth.guard.ts  auth.service.ts  cookie.ts  roles.decorator.ts  roles.guard.ts  session.types.ts  (+1 more)
apps/api/test/: api.spec.ts  setup-env.ts
apps/web/: README.md  package.json
docs/: 00-OVERVIEW.md  01-PRD.md  02-ARCHITECTURE.md  03-ROADMAP.md  04-GTM-AND-RISKS.md  05-SECURITY-AND-THREAT-MODEL.md  06-DESIGN-SYSTEM.md  07-SCALING-AND-TOOLING.md  08-ENGINEERING-FOUNDATIONS.md  09-RUNTHROUGH.md  10-PITCH.md  11-SETUP.md  12-EXPLAIN-SIMPLE.md
e2e/: package.json  playwright.config.ts
e2e/tests/: golden-path.spec.ts
scripts/: handoff-snapshot.mjs
services/ai/: README.md  package.json  pyproject.toml
services/ai/app/: costcontrol.py  env.py  main.py  provenance.py  providers.py  schemas.py
services/ai/tests/: test_api.py  test_costcontrol.py  test_providers.py
(+52 files in other folders)
