[project]
name = "aegis-ai"
version = "0.1.0"
description = "Aegis AI service — draft, suggest, and classify with provenance (advisory only)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "anthropic>=0.40",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "fakeredis>=2.36.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
